# Node_JS/packages/express_mongoose_structure/src/models/Product.js
@@ -1,0 +1,34 @@
+const mongoose = require("mongoose");
+
+const productSchema = new mongoose.Schema(
+  {
+    title: {
+      type: String,
+      required: true,
+    },
+    mrp: {
+      type: Number,
+      required: true,
+    },
+    price: {
+      type: Number,
+      required: true,
+    },
+    sku: {
+      type: String,
+      unique: true,
+      required: true,
+    },
+    description: String,
+    imageURL: {
+      type: String,
+      required: true,
+    },
+    type: String,
+  },
+  {
+    timestamps: true,
+  }
+);
+
+module.exports = mongoose.model("Product", productSchema);
