# Node_JS/packages/express_mongoose_structure/src/routes/studentRoutes.js
@@ -1,19 +1,0 @@
-const express = require("express");
-const {
-  getAllStudents,
-  getStudentById,
-  createStudent,
-  updateStudent,
-  deleteStudent,
-} = require("../controllers/studentController");
-const authenticateToken = require("../middleware/auth");
-
-const router = express.Router();
-
-router.get("/", authenticateToken, getAllStudents);
-router.get("/:id", authenticateToken, getStudentById);
-router.post("/", authenticateToken, createStudent);
-router.put("/:id", authenticateToken, updateStudent);
-router.delete("/:id", authenticateToken, deleteStudent);
-
-module.exports = router;
